Fixed lots of usability issues in Grading (a.k.a. Spreadsheet) app: - Same keyboard shorcutss on all views. (using proxy events). - Splashscreen with instructions - Better separation between noteview and docview (i.e. using the "preview" label). - Fixed wrong order of comments. - Even / Odd coloring. - turned off hover event: too distracting. - improved CSS
Proxy events are still too much hardwired into the view code, and for now, we use the convention that in order to turn on the default behaviour, we use the negative keyCode or charCode.

--- a/content/modules/dev/ui.docView5.css
+++ b/content/modules/dev/ui.docView5.css
@@ -8,6 +8,17 @@ div.docView{
 	background-color: #E6E6E6 !important;
 }
 
+div.docView >  div.util{
+opacity: 0.5;
+background-color: #707070;
+color: #e0f0ff;
+position: fixed;
+z-index: 1;
+font-family: Helvetica, sans-serif;
+font-weight: bold;
+padding: 1px 5px 1px 5px;
+}
+
 div.docView div.material.selected{
 border: 2px  solid #5090f0;
 //opacity: 1.0;
