--- a/content/modules/dev/ui.notepaneView6.css
+++ b/content/modules/dev/ui.notepaneView6.css
@@ -23,7 +23,16 @@ div.notepaneView div.lens-odd{
 background-color: #f0f0f0;
 }
 
+
+div.notepaneView div.lens-even{
+background-color: #e5e5e5;
+border: thin solid #e0e0e0;
+}
+
+
+
 div.notepaneView span.gradecontainer{
+float: right;
 padding-left: 20px;
 }
 
@@ -152,7 +161,7 @@ div.notepaneView div.collectioninfo{
     color: #D0D0D0;
     font-size: medium;
     padding: 9px;
-    text-align: center;
+//    text-align: center;
 }
 
 
@@ -169,12 +178,12 @@ div.threadview div.note-lens{
 //color: #404040;
 padding-top: 5px;
 padding-bottom: 5px;
-border: thin solid #fefefe;
+border: thin solid transparent;
 
 }
 
 div.threadview div.note-lens:hover{
-background-color:  #ffffd0;
+//background-color:  #ffffd0;
 border: thin solid #c0c0c0;
 }
 
